--- a/docroot/sites/all/themes/shelter/assets/sass/_events.scss
+++ b/docroot/sites/all/themes/shelter/assets/sass/_events.scss
@@ -54,3 +54,7 @@ ul.addtocal_menu {
     }
 }
 
+.event-card .event-description img {
+  height: auto !important;
+  max-width: 100%;
+}
